--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+  <h1>Welcome</h1>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
