--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <h1>Welcome</h1>
+  <h1>Welcome: <%= current_site.try :name %></h1>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
